--- a/gitklientmerge/mergecloseeventdialog.ui
+++ b/gitklientmerge/mergecloseeventdialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>CloseEventDialog</class>
- <widget class="QDialog" name="CloseEventDialog">
+ <widget class="QDialog" name="MergeCloseEventDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
