--- a/gitklientmerge/mergeopenfilesdialog.ui
+++ b/gitklientmerge/mergeopenfilesdialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>OpenFilesDialog</class>
- <widget class="QDialog" name="OpenFilesDialog">
+ <widget class="QDialog" name="MergeOpenFilesDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
