--- a/src/widgets/remoteswidget.ui
+++ b/src/widgets/remoteswidget.ui
@@ -63,7 +63,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="layoutWidget">
+     <widget class="QWidget" name="layoutWidget1">
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <widget class="QGroupBox" name="groupBox">
