--- a/src/widgets/branchesstatuswidget.ui
+++ b/src/widgets/branchesstatuswidget.ui
@@ -50,6 +50,9 @@
      <property name="enabled">
       <bool>true</bool>
      </property>
+     <property name="contextMenuPolicy">
+      <enum>Qt::CustomContextMenu</enum>
+     </property>
      <column>
       <property name="text">
        <string>Name</string>
