--- a/src/settingsBase.ui
+++ b/src/settingsBase.ui
@@ -36,7 +36,7 @@
    <item>
     <layout class="QFormLayout" name="formLayout_2">
      <item row="0" column="0">
-      <widget class="QLabel" name="label">
+      <widget class="QLabel" name="labelDefaultCalendar">
        <property name="text">
         <string>Default calendar:</string>
        </property>
